Criando um novo arquivo para o CSS

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/cores.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/cores.html
@@ -1,29 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    
+</head>
 
-        h1 {color: #9400D3; font: size 60px;
-        }
-
-        body{
-            background-color: #d687ea;
-        }
-
-        #lista {
-            background-color: #A020F0;
-        }
-    </style>
-  </head>
-  <body>
+<body>
     <h1>Exercícios 3.2</h1>
     <p>Qual é a sua cor favorita?</p>
     <ul>
-      <li id="lista">Amarelo</li>
-      <li id="lista">Vermelho</li>
-      <li id="lista">Marrom</li>
+        <li id="roxo" style="background-color: #a741d3;">Roxo</li>
+        <li id="vermelho" style="background-color: red;">Vermelho</li>
+        <li id="preto" style="background-color: rgb(78, 74, 74);">Preto</li>
     </ul>
-  </body>
+</body>
+
 </html>
