--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/trybe.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/trybe.html
@@ -1,22 +1,95 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <header>
-      <h2 id="page-title">Título</h2>
-      <p id="paragraph">Dê uma cor para este parágrafo!</p>
-      <h4 id="subtitle">Subtítulo</h4>
-      <p id="second-paragraph">Segundo parágrafo!</p>
-      <p class="teste">Paragrafo de teste</p>
-      <p class="teste">Testando paragrafo</p>
-      <script src="script.js"></script>
-     
-    </header>
-    <script>
-      const paragraph = document.getElementById("paragraph");
-      paragraph.style.color = "red";
-    </script>
-     
-  </body>
-</html>
 
-//
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Exercício 5.1</title>
+
+    <style>
+        main,
+        section {
+            border-color: black;
+            border-style: solid;
+        }
+
+        .title {
+            text-align: center;
+        }
+
+        .main-content {
+            background-color: yellow;
+        }
+
+        .main-content .center-content {
+            background-color: red;
+            width: 50%;
+            margin: 0 auto;
+        }
+
+        .main-content .center-content p {
+            font-style: italic;
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <h1 class="title">Exercício 5.1 - JavaEscripito </h1>
+    </header>
+    <main class="main-content">
+        <section class="center-content">
+            <p>Texto padrão do nosso site</p>
+            <p>-----</p>
+            <p>Trybe</p>
+        </section>
+    </main>
+    <script>
+        function changeText() {
+            let paragraph = document.getElementsByTagName("p")[1];
+            paragraph.innerHTML = "Me vejo trabalhando em algum lugar fixo, com casa própria e renda estabilizada";
+        } changeText();
+
+        function mudandoCorDeFundo(){
+            let fundoAmarelo = document.getElementsByClassName('main-content')[0];
+        fundoAmarelo.style.background = "rgb(76,164,109)";
+        } mudandoCorDeFundo();
+
+        function mudandoCorVermelha(){
+            let fundoRed = document.getElementsByClassName ('center-content')[0];
+            fundoRed.style.background = "white";
+        } mudandoCorVermelha();
+
+        function changeText(){
+            let textChange = document.getElementsByTagName ("h1")[0];
+            textChange.innerHTML = "Exercício 5.1 - JavaEscript";
+        }changeText();
+
+        function changeTags(){
+            let tagsChange = document.getElementsByTagName ('p')[0];
+            tagsChange.innerHTML = tagsChange.innerHTML.toUpperCase();
+        }changeTags();
+
+        function conteudo(){
+            let changeConteudo = document.getElementsByTagName('p');
+            for(let index =0; index < changeConteudo.length; index += 1){
+                console.log(changeConteudo[index].innerHTML);
+            }
+        }conteudo();
+
+        /*
+        Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
+        - document.getElementById()
+        - document.getElementsByClassName()
+        - document.getElementsByTagName()
+ Crie e execute uma função que mude o texto na tag `<p>-----</p>`, para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício) 
+ Crie e execute uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
+ Crie e execute uma função que mude a cor do quadrado vermelho para branco.
+ Crie e execute uma função que corrija o texto da tag <h1>.
+ Crie e execute uma função que modifique todo o texto da tag <p> para maiúsculo.
+ Crie e execute uma função que exiba o conteúdo de todas as tags <p> no console.
+        */
+    </script>
+</body>
+
+</html>
