--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercicios/5.2.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercicios/5.2.html
@@ -77,7 +77,7 @@
 
         //Adicione a tag p como filho do section criado no passo 3 e coloque algum texto;
         const elementTagP = document.createElement('p');
-        elementTagP.innerHTML = 'Criando um parágrafo aqui';
+        elementTagP.innerHTML = 'Criando este exercicio';
         elementSection.appendChild(elementTagP);
 
         //Adicione a tag section com a classe left-content como filho da tag main criada no passo 2;
@@ -126,17 +126,17 @@
         }
 
         //Remova a section criado no passo 5 (aquele que possui a classe left-content). Utilize a função .removeChild();
-        const elementSectionLeft = document.getElementsByClassName('left-content')[0];
-        elementMain.removeChild(elementSectionLeft);
+        const elementSectionLeftContent = document.getElementsByClassName('left-content')[0];
+        elementMain.removeChild(elementSectionLeftContent);
 
         //Centralize a section criado no passo 6 (aquele que possui a classe right-content). Dica: para centralizar, basta configurar o margin-right: auto da section;
 
-        const elementSectionRight = document.getElementsByClassName('right-content')[0];
-        elementSectionRight.style.marginRight='auto';
+        const elementSectionRightContent = document.getElementsByClassName('right-content')[0];
+        elementSectionRightContent.style.marginRight = 'auto';
 
         //Troque a cor de fundo do elemento pai da section criada no passo 3 (aquela que possui a classe center-content) para a cor verde;
-        const elementSection = document.getElementsByClassName('center-content')[0];
-       elementSection.parentNode.style.backgroundColor='green';
+        const elementSectionContent = document.getElementsByClassName('center-content')[0];
+        elementSectionContent.parentNode.style.backgroundColor = 'purple';
     </script>
 </body>
 
