--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercicios/5.2.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercicios/5.2.html
@@ -126,8 +126,8 @@
         }
 
         //Remova a section criado no passo 5 (aquele que possui a classe left-content). Utilize a função .removeChild();
-        const elementSectionLeftContent = document.getElementsByClassName('left-content')[0];
-        elementMain.removeChild(elementSectionLeftContent);
+        //const elementSectionLeftContent = document.getElementsByClassName('left-content')[0];
+        //elementMain.removeChild(elementSectionLeftContent);
 
         //Centralize a section criado no passo 6 (aquele que possui a classe right-content). Dica: para centralizar, basta configurar o margin-right: auto da section;
 
