Resolvendo questões de mobile first

--- a/fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise1.html
+++ b/fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise1.html
@@ -43,7 +43,7 @@
         </figure>
         <figure>
           <img src="http://placekitten.com/452/450?image=16" alt="Placeholder kitteh">
-          <figcaption>Place Kittens are great</figcaption>
+          <figcaption>Place Kittens are great!</figcaption>
         </figure>
       </section>
     </main>
