--- a/fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise2.html
+++ b/fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise2.html
@@ -13,9 +13,9 @@
       <p id="alice">Alice's Adventures in Wonderland</p>
       <nav>
         <ul class="cabecalho">
-          <li>Home</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
     </header>
